--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -6,5 +6,18 @@
 {% block content %}
 
 
+{% include 'core/components/header.html' %}
+
+
+<div class="container flex flex-col mx-auto mb-72 m-2 md:m-auto">
+
+{% include 'core/components/exp.html' %}
+{% include 'core/components/formation.html' %}
+{% include 'core/components/skills.html' %}
+{% include 'core/components/projects.html' %}
+
+</div>
+{% include 'core/components/contact.html' %}
+
 
 {% endblock content %}
