--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,79 +1,79 @@
-<nav class="flex items-center justify-between flex-wrap bg-sky-900 p-2">
+<div class="absolute">
+
+  <nav
+      class="fixed top-0 left-0 right-0 flex flex-row-reverse items-center justify-around sm:justify-between flex-wrap bg-sky-900 py-2 px-1 ">
+
+      <a href="#" class=" flex items-center flex-shrink-0 text-white mr-0 md:mr-6
+text-white hover:bg-sky-700 hover:border-slate-50 rounded-md font-medium
+py-2 px-1 md:mx-5 ">
+
+          <span class="font-semibold text-xl tracking-tight">Ragnarok</span>
 
 
-
-  <a href="#" class=" flex items-center flex-shrink-0 text-white mr-6
-    text-white hover:bg-sky-700 hover:border-slate-50 rounded-md font-medium
-    py-2 px-3 mx-5 ">
-
-
-
-    <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54"
-      xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z" />
-    </svg>
-
-    <span class="font-semibold text-xl tracking-tight">Ragnarok</span>
-
-  </a>
-
-
-
-  <!-- botton de despliege -->
-  <div class="block md:hidden">
-    <button id='boton' class="flex items-center px-3 py-2 
-      border rounded border-sky-400 hover:text-white hover:border-white
-      text-white ">
-      <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-        <title>Menu</title>
-        <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-      </svg>
-    </button>
-    <!-- botton de despliege -->
-
-
-
-  </div>
-  <div id='menu' class="w-full block flex-grow md:flex md:items-center md:w-auto">
-    <div class="text-sm md:flex-grow">
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        About
-      </a>
-
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        Experiencia
-      </a>
-
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        Formacion
-      </a>
-
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        Skills
-      </a>
-
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        Proyectos
-      </a>
-
-      <a href="#" class="
-      text-white hover:bg-sky-700 hover:border-sky-400 rounded-md font-medium
-      md:inline-block block px-3 py-2 text-center ">
-        Contacto
+          <svg class="fill-current h-8 w-8 ml-1" width="54" height="54" viewBox="0 0 54 54"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                  d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z" />
+          </svg>
       </a>
 
 
-    </div>
-  </div>
-</nav>
+
+      <!-- botton de despliege -->
+      <div class="block sm:hidden">
+          <button id='navboton' class="flex items-center px-3 py-2 
+  border rounded border-sky-700 hover:text-white hover:border-white
+  text-white ">
+              <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <title>Menu</title>
+                  <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+              </svg>
+          </button>
+          <!-- botton de despliege -->
+
+
+
+      </div>
+      <div id='navmenu' class="w-full px-0 block flex-grow sm:flex sm:items-center sm:w-auto hidden">
+          <div class="text-sm sm:flex-grow ">
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-3 py-2 text-center ">
+                  About
+              </a>
+
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-3 py-2 text-center ">
+                  Experiencia
+              </a>
+
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-3 py-2 text-center ">
+                  Formacion
+              </a>
+
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-3 py-2 text-center ">
+                  Skills
+              </a>
+
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-3 py-2 text-center ">
+                  Proyectos
+              </a>
+
+              <a href="#" class="
+  text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
+  sm:inline-block block px-2 py-2 text-center ">
+                  Contacto
+              </a>
+
+
+          </div>
+      </div>
+  </nav>
+</div>
