--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,16 @@ text-4xl sm:text-3xl md:text-2xl lg:text-xl xl:text-lg">
 
 
   {% block content %}
-  
   {% endblock content %}
 
 
-  
   {% include 'footer.html' %}
-  <script src="{% static 'js/navbar.js' %}"></script>
+
+
+
+
+  <!-- <script src="{% static 'js/navbar.js' %}"></script> -->
+
 </body>
 
 </html>
