--- a/templates/core/components/exp.html
+++ b/templates/core/components/exp.html
@@ -2,9 +2,9 @@
 <div class="mx-36 mt-24">
   <div class="container flex justify-center mx-auto">
     <div class="my-12">
-      <p class="text-gray-50 text-5xl text-center pb-3">Experiencia:</p>
-      <h1 class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
-        The Talented People Behind the Scenes of the Organization</h1>
+      <h1 class="text-gray-50 text-5xl text-center pb-3">Experiencia:</h1>
+      <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
+        Work carried out in conjunction with work groups</p>
     </div>
   </div>
 
@@ -14,6 +14,8 @@
       <div class="relative">
         <div class="border-r-4 border-black absolute h-full top-0"></div>
         <ul class="list-none m-0 p-0">
+
+          {% for e in exp %}
           <li class="mb-5  ">
             <div class="flex group items-center ">
               <div class="bg-gray-800 group-hover:bg-sky-700 z-10 rounded-full border-4 border-black  h-5 w-5">
@@ -21,37 +23,17 @@
               </div>
               <div class="ml-4 font-medium">
                 <div class="order-1 space-y-2 rounded-lg shadow-only transition-ease px-6 py-4">
-                  <h3 class=" mb-0 font-bold text-white text-2xl">Personal Portfolio April
-                    Fools</h3>
-                  <p class="pb-0  text-sm text-gray-300">University of DVI (1997 - 2001)</p>
+                  <h3 class=" mb-0 font-bold text-white text-2xl">{{e.title}}</h3>
+                  <p class="pb-0  text-sm text-gray-300">{{e.team}} ( {{e.init_date}} - Present )</p>
                   <hr />
                   <p class="text-sm font-medium leading-snug tracking-wide text-gray-300 text-opacity-100">
-                    The education should be very interactual. Ut tincidunt est ac dolor
-                    aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in,
-                    lobortis mauris hendrerit ante.</p>
+                    {{e.description}}</p>
                 </div>
               </div>
             </div>
           </li>
-          <li class="mb-5  ">
-            <div class="flex group items-center ">
-              <div class="bg-gray-800 group-hover:bg-sky-700 z-10 rounded-full border-4 border-black  h-5 w-5">
-                <div class="bg-black h-1 w-6 items-center  ml-4 mt-1"></div>
-              </div>
-              <div class="ml-4 font-medium">
-                <div class="order-1 space-y-2 rounded-lg shadow-only transition-ease px-6 py-4">
-                  <h3 class=" mb-0 font-bold text-white text-2xl">Personal Portfolio April
-                    Fools</h3>
-                  <p class="pb-0  text-sm text-gray-300">University of DVI (1997 - 2001)</p>
-                  <hr />
-                  <p class="text-sm font-medium leading-snug tracking-wide text-gray-300 text-opacity-100">
-                    The education should be very interactual. Ut tincidunt est ac dolor
-                    aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in,
-                    lobortis mauris hendrerit ante.</p>
-                </div>
-              </div>
-            </div>
-          </li>
+          {% endfor %}
+
 
         </ul>
       </div>
