--- a/templates/core/components/skills.html
+++ b/templates/core/components/skills.html
@@ -5,9 +5,9 @@
 
     <div class="container flex justify-center mx-auto">
         <div class="my-12">
-            <p class="text-gray-50 text-5xl text-center pb-3">Skills:</p>
-            <h1 class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
-                The Talented People Behind the Scenes of the Organization</h1>
+            <h1 class="text-gray-50 text-5xl text-center pb-3">Skills:</h1>
+            <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
+                The Talented People Behind the Scenes of the Organization</p>
         </div>
     </div>
     <div class="w-full px-10 pt-10">
@@ -15,40 +15,41 @@
             <div role="list" aria-label="Behind the scenes Skills "
                 class="lg:flex md:flex sm:flex items-center xl:justify-between flex-wrap md:justify-around sm:justify-around lg:justify-around">
 
+                {% for s in skills %}
 
-                <div role="listitem"
-                    class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5">
-                    <div class="rounded overflow-hidden shadow-md bg-teal-900">
+                    <div role="listitem"
+                        class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5">
+                        <div class="rounded overflow-hidden shadow-md bg-teal-900">
 
-                        <div class="absolute -mt-20 w-full flex justify-center">
-                            <a href="">
+                            <div class="absolute -mt-20 w-full flex justify-center">
+                                <a href="">
 
-                                <div class="h-32 w-32 hover:h-36 hover:w-36">
-                                    <div
-                                        class="rounded-xl bg-sky-200 hover:bg-sky-300 object-cover h-full w-full shadow-md flex justify-center items-center">
-                                   
-                                        <img src="{% static 'images/svg/html5.svg' %}" alt="">
+                                    <div class="h-32 w-32 ">
+                                        <div
+                                            class="rounded-xl bg-sky-200 hover:bg-sky-300 object-cover h-full w-full shadow-md flex justify-center items-center">
 
+                                            <img src="{{ s.image.url }}" alt="">
+
+
+                                        </div>
 
                                     </div>
+                                </a>
+
+                            </div>
+                            <div class="px-6 mt-16">
+                                <h1 class="font-bold text-3xl text-center mb-1">{{ s.name }}</h1>
+                                <p class="text-gray-50 text-sm text-center border"></p>
+                                <p class="text-center text-gray-100 text-base pt-3 font-normal">
+                                    {{s.description|truncatewords:7 }}</p>
+                                <div class="w-full flex justify-center pt-5 pb-5">
 
                                 </div>
-                            </a>
-
-                        </div>
-                        <div class="px-6 mt-16">
-                            <h1 class="font-bold text-3xl text-center mb-1">Html 5</h1>
-                            <p class="text-gray-50 text-sm text-center border">Lenguaje de marcado</p>
-                            <p class="text-center text-gray-100 text-base pt-3 font-normal">The CEO's role
-                                in raising a company's corporate IQ is to establish an atmosphere that
-                                promotes knowledge sharing and collaboration.</p>
-                            <div class="w-full flex justify-center pt-5 pb-5">
-
                             </div>
                         </div>
                     </div>
-                </div>
-               
+
+                {% endfor %}
 
             </div>
         </div>
