navbar y detalles de front

--- a/templates/core/components/exp.html
+++ b/templates/core/components/exp.html
@@ -4,7 +4,7 @@
     <div class="my-12">
       <h1 class="text-gray-50 text-5xl text-center pb-3">Experiencia:</h1>
       <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
-        Work carried out in conjunction with work groups</p>
+        Trabajos realizados en conjunto con grupos de trabajo</p>
     </div>
   </div>
 
