--- a/templates/core/components/formation.html
+++ b/templates/core/components/formation.html
@@ -1,9 +1,9 @@
 
         <!-- Formacion -->
-        <div class="mx-36 mb-60">
+        <div class="mx-36 mb-32">
             <div class="container flex justify-center mx-auto">
                 <div class="my-0">
-                    <h1 class="text-gray-50 text-5xl text-center pb-3">Formacion:</h1>
+                    <h1 class="text-gray-50 text-5xl text-center pb-3">Formación:</h1>
                     <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
                     </p>
                 </div>
