--- a/templates/core/components/projects.html
+++ b/templates/core/components/projects.html
@@ -5,24 +5,28 @@
         <div class="my-8">
             <h1 class="text-gray-50 text-5xl text-center pb-3">Projects</h1>
             <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
-                Developed applications  </p>
+                Developed applications </p>
         </div>
     </div>
 
     <div class="max-w-2xl mx-auto p-4 sm:py-12 sm:px-6 lg:max-w-7xl lg:px-8">
 
         <div class=" mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-         
-         {% for p in projects %}
+
+            {% for p in projects %}
             <!-- iten -->
             <div class="border rounded p-2 group ">
 
 
-                <div
-                    class="w-full min-h-80 bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75 ">
-                    <img class="rounded-t-lg w-full h-full object-center object-cove"
-                        src="{{ p.image.url }}" alt="">
-                </div>
+                <a href="{% url 'project_view' p.slug %}">
+
+                    <div
+                        class="w-full min-h-80 bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75 ">
+                        <img class="rounded-t-lg w-full h-full object-center object-cove" src="{{ p.image.url }}"
+                            alt="">
+                    </div>
+                </a>
+
                 <div class="mt-1 flex flex-grap">
                     <div>
                         <h3 class="text-md text-gray-100">
@@ -45,7 +49,7 @@
                 </div>
             </div>
             <!-- enditen... -->
-        {% endfor %}
+            {% endfor %}
         </div>
 
 
