--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} {% endblock title %}
+{% block title %}Angel Riera Dev Dj-R{% endblock title %}
 
 {% block content %}
 
