--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!-- Footer -->
 <footer class="bg-sky-900 flex-grap w-full h-full mt-96  p-0">
     <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8">
-        <nav class="flex flex-wrap justify-center -mx-5 -my-2">
+        <!-- <nav class="flex flex-wrap justify-center -mx-5 -my-2">
             <div class="px-5 py-2">
                 <a href="#"
                     class="text-base leading-6 text-gray-400 hover:text-gray-50 hover:bg-sky-800 px-3 py-1 hover:border border-sky-700 rounded">
@@ -14,23 +15,39 @@
                     Terms
                 </a>
             </div>
-        </nav>
+        </nav> -->
         <div class="flex justify-center mt-8 space-x-6">
-            <a href="#" class="text-gray-400 hover:text-gray-200">
-                <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24">
-                    <path fill-rule="evenodd"
-                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
-                        clip-rule="evenodd"></path>
-                </svg>
+            <!-- twitter -->
+            <a href="https://twitter.com/RagnAndRoll" 
+            class="text-gray-400 hover:text-gray-200" target="__blank">              
+                <img src=" {% static 'images/icons/twitter.svg' %}" 
+                class="h-6 w-6 fill-gray-50"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" alt="">                
             </a>
-            <a href="#" class="text-gray-400 hover:text-gray-200">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
-                  </svg>
+            <!-- twitter -->
+
+            <!-- linkedin -->
+            <a href="https://www.linkedin.com/in/angelriera/" 
+            class="text-gray-400 hover:text-gray-200" target="__blank">              
+                <img src=" {% static 'images/icons/linkedin.svg' %}" 
+                class="h-6 w-6 fill-gray-50"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" alt="">                
             </a>
+            <!-- linkedin -->
+
+            <!-- gitHub -->
+            <a href="https://github.com/RagAndRoll" 
+            class="text-gray-400 hover:text-gray-200" target="__blank">              
+                <img src=" {% static 'images/icons/github2.svg' %}" 
+                class="h-6 w-6 fill-gray-50"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" alt="">                
+            </a>
+            <!-- gitHub -->
+
+
         </div>
         <a href="https://github.com/RagAndRoll" target="__blank">
-            <p class="mt-8 text-base leading-6 text-center text-gray-400">
+            <p class="mt-8 text-base leading-6 text-center text-gray-400 underline underline-offset-8">
                 ©2022 Ragnarok. All rights reserved.
 
             </p>
