--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,8 +3,8 @@
   <nav
       class="fixed top-0 left-0 right-0 flex flex-row-reverse items-center justify-around sm:justify-between flex-wrap bg-sky-900 py-2 px-1 ">
 
-      <a href="#" class=" flex items-center flex-shrink-0 text-white mr-0 md:mr-6
-text-white hover:bg-sky-700 hover:border-slate-50 rounded-md font-medium
+      <a href="{% url 'home' %}" class=" flex items-center flex-shrink-0 text-white mr-0 md:mr-6
+text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
 py-2 px-1 md:mx-5 ">
 
           <span class="font-semibold text-xl tracking-tight">Ragnarok</span>
