--- a/templates/core/components/header.html
+++ b/templates/core/components/header.html
@@ -1,7 +1,7 @@
 {% load static %}
-<div class="mb-26 ">
+<div class="mb-26 " id="about">
 
-    <div class="bg-gradient-to-b from-teal-900 to-teal-700 bg-left-top bg-auto bg-repeat-x 
+    <div class="bg-gradient-to-b from-teal-900 to-teal-800 bg-left-top bg-auto bg-repeat-x 
     h-72 sm:h-60 
     -mb-48 
     md:-mb-28
