--- a/templates/core/components/contact.html
+++ b/templates/core/components/contact.html
@@ -1,6 +1,6 @@
 
     <!-- Contact -->
-    <div class="w-full bg-gray-800 h-screen mb-96 mx-auto">
+    <div class="w-full bg-gray-800 h-screen mb-96 mx-auto" id="contact">
         <div class="bg-gradient-to-b from-teal-800 to-teal-600 h-96"></div>
         <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8">
             <div class="bg-gray-900 w-full shadow rounded p-8 sm:p-12 -mt-72">
