--- a/templates/core/components/projects.html
+++ b/templates/core/components/projects.html
@@ -1,6 +1,6 @@
 <!-- Proyectos -->
 
-<div class="my-24 mx-auto">
+<div class="my-32 mx-auto" id="projects">
     <div class="container flex justify-center mx-auto">
         <div class="my-8">
             <h1 class="text-gray-50 text-5xl text-center pb-3">Projects</h1>
