--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,37 +36,37 @@ py-2 px-1 md:mx-5 ">
       </div>
       <div id='navmenu' class="w-full px-0 block flex-grow sm:flex sm:items-center sm:w-auto hidden">
           <div class="text-sm sm:flex-grow ">
-              <a href="#" class="
+              <a href="{% url 'home' %}#about" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-3 py-2 text-center ">
                   About
               </a>
 
-              <a href="#" class="
+              <a href="{% url 'home' %}#exp" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-3 py-2 text-center ">
                   Experiencia
               </a>
 
-              <a href="#" class="
+              <a href="{% url 'home' %}#formation" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-3 py-2 text-center ">
                   Formacion
               </a>
 
-              <a href="#" class="
+              <a href="{% url 'home' %}#skills" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-3 py-2 text-center ">
                   Skills
               </a>
 
-              <a href="#" class="
+              <a href="{% url 'home' %}#projects" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-3 py-2 text-center ">
                   Proyectos
               </a>
 
-              <a href="#" class="
+              <a href="{% url 'home' %}#contact" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-2 py-2 text-center ">
                   Contacto
