skill view and project view

--- a/templates/core/components/header.html
+++ b/templates/core/components/header.html
@@ -30,7 +30,7 @@
                         Desarrollador web Full Stack Django React</p>
                 </div>
 
-                <p class="mt-2 md:mt-12 xl:mt-24 text-lg tracking-widest">
+                <p class="mt-2 md:mt-10 xl:mt-24 text-lg tracking-widest">
                     Soy estudiante autodidacta desarrollador web fullstack, aprendo a mi ritmo, y me gusta buscar
                     las
                     respuestas a los problemas
@@ -38,6 +38,14 @@
                     Creo que el virtuosismo es la mejor manera de ayudar a crear un mundo mejor, aprender y enseñar.
                     Creo en la organización y productividad como el pilar para el éxito para alcanzar cualquier
                     objetivo.
+                    Desarrollopersonal | Organizacion y productividad | Disciplina
+                    Artesmarciales; coreanas ymixtas | Parkour | Tricking 
+                </p>
+                <p class="underline underline-offset-8 text-sm xl:text-xl font-medium text-gray-400 ">
+                    intereses:</p>
+                <p class="mt-2 md:mt-10 xl:mt-24 text-lg tracking-widest">                    
+                    Desarrollopersonal | Organizacion y productividad | Disciplina
+                    Artesmarciales coreanas y mixtas | Parkour | Tricking 
                 </p>
             </div>
         </div>
