--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -13,8 +13,14 @@
 
     {% include 'core/components/exp.html' %}
     {% include 'core/components/formation.html' %}
-    {% include 'core/components/skills.html' %}
+    <div class="mx-36">
+        <hr>
+    </div>
     {% include 'core/components/projects.html' %}
+    <div class="mx-36">
+        <hr>
+    </div>
+    {% include 'core/components/skills.html' %}
 
 </div>
 {% include 'core/components/contact.html' %}
