--- a/templates/core/components/contact.html
+++ b/templates/core/components/contact.html
@@ -6,23 +6,15 @@
             <div class="bg-gray-900 w-full shadow rounded p-8 sm:p-12 -mt-72">
                 <p class="text-3xl font-bold leading-7 text-center text-white">Contact me</p>
                 <form action="" method="post">
+
                     <div class="md:flex items-center mt-12">
                         <div class="w-full flex flex-col">
-                            <label class="font-semibold leading-none text-gray-300">Name</label>
-                            <input type="text"
+                            <label class="font-semibold leading-none text-gray-300">your Mail</label>
+                            <input type="mail"
                                 class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
                         </div>
-
                     </div>
 
-                    <div class="md:flex items-center mt-8">
-                        <div class="w-full flex flex-col">
-                            <label class="font-semibold leading-none text-gray-300">Subject</label>
-                            <input type="text"
-                                class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
-                        </div>
-
-                    </div>
                     <div>
                         <div class="w-full flex flex-col mt-8">
                             <label class="font-semibold leading-none text-gray-300">Message</label>
