--- a/templates/core/components/skills.html
+++ b/templates/core/components/skills.html
@@ -23,6 +23,7 @@
 
                             <div class="absolute -mt-16 w-full flex justify-center">
                            
+                                    <a href="{% url 'skill_view' s.slug %}">
 
                                     <div class="h-24 w-24">
                                         <div class="rounded-[30px] bg-sky-200 p-4 shadow-md flex justify-center items-center">
@@ -33,6 +34,8 @@
                                         </div>
 
                                     </div>
+                                    </a>
+
     
 
                             </div>
@@ -54,7 +57,5 @@
         </div>
     </div>
 </div>
-<div class="mx-36">
-    <hr>
-</div>
+
 <!-- EndSkills -->
