--- a/templates/core/skill_view.html
+++ b/templates/core/skill_view.html
@@ -1,7 +1,100 @@
 {% extends 'base.html' %}
 
 
-{% block title %}{{project}} {% endblock title %}
+{% block title %}{{skill.name}}{% endblock title %}
 
 {% block content %}
-{% endblock content %}
+<div class="my-32 container mx-auto">
+
+    <div class="max-w-full mb-24">
+        <div class="my-12">
+            
+            <h1 class="text-gray-50 text-5xl text-center pb-3">descripcion de habilidad: {{skill.name}}</h1>
+            
+            <div class="flex justify-center">
+                <div class="h-24 w-24">
+                    <div class="rounded-[30px] bg-sky-200 p-4 shadow-md flex justify-center items-center">
+
+                        <img src="{{ skill.image.url }}" alt="">
+                    </div>
+                </div>
+
+            </div>
+            <p class="xl:text-2xl text-1xl mt-12  text-gray-300 pb-6 mx-12 mx-auto ">
+                {{ skill.description}}
+            </p>
+
+        </div>
+
+        <div class="mx-36 mb-12">
+            <hr>
+        </div>
+
+        <div class=" flex justify-center ">
+            <div class="my-8">
+                <h1 class="text-gray-50 text-5xl text-center pb-3">Projects</h1>
+                <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
+                    projectos que hacen uso de esta habilidad </p>
+            </div>
+        </div>
+
+        <div class="max-w-2xl mx-auto p-4 sm:py-12 sm:px-6 lg:max-w-7xl lg:px-8">
+
+            <div class=" mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+
+                {% for p in projects %}
+                <!-- iten -->
+                <div class="border rounded p-2 group ">
+
+
+                    <a href="{% url 'project_view' p.slug %}">
+
+                        <div
+                            class="w-full min-h-80 bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75 ">
+                            <img class="rounded-t-lg w-full h-full object-center object-cove" src="{{ p.image.url }}"
+                                alt="">
+                        </div>
+                    </a>
+
+                    <div class="mt-1 flex flex-grap">
+                        <div>
+                            <h3 class="text-md text-gray-100">
+
+                                <span aria-hidden="true" class="inset-0"></span>
+                                {{p.name}}
+
+
+                            </h3>
+                        </div>
+
+                    </div>
+                    <div class="m-2">
+                        <hr>
+
+                    </div>
+                    <div class="flex justify-between">
+                        <p class="text-sm font-medium text-gray-200 ">init date:</p>
+                        <p class="text-sm text-gray-50"> {{p.date}}</p>
+
+                        <div class="flex justify-between ">
+                            <a class="px-2 py-1 mx-1 bg-gray-900 text-gray-200 text-xs rounded hover:bg-gray-800"
+                                href="#">GitHub</a>
+                            <a class="px-2 py-1 mx-1 bg-gray-300 text-gray-900 text-xs rounded hover:bg-gray-400"
+                                href="#">Live</a>
+                        </div>
+                    </div>
+
+
+                </div>
+                <!-- enditen... -->
+                {% endfor %}
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+
+    {% endblock content %}
