--- a/templates/core/components/exp.html
+++ b/templates/core/components/exp.html
@@ -1,5 +1,5 @@
 <!-- expereiencia -->
-<div class="mx-36 mt-24" id="exp">
+<div class="mx-36 my-32" id="exp">
   <div class="container flex justify-center mx-auto">
     <div class="my-12">
       <h1 class="text-gray-50 text-5xl text-center pb-3">Experiencia:</h1>
