--- a/templates/core/components/header.html
+++ b/templates/core/components/header.html
@@ -30,20 +30,18 @@
                         Desarrollador web Full Stack Django React</p>
                 </div>
 
-                <p class="mt-2 md:mt-10 xl:mt-24 text-lg tracking-widest">
+                <p class="mt-2 md:mt-10 xl:mt-12 text-lg tracking-widest">
                     Soy estudiante autodidacta desarrollador web fullstack, aprendo a mi ritmo, y me gusta buscar
                     las
                     respuestas a los problemas
                     Soy un apasionado del desarrollo personal.
                     Creo que el virtuosismo es la mejor manera de ayudar a crear un mundo mejor, aprender y enseñar.
                     Creo en la organización y productividad como el pilar para el éxito para alcanzar cualquier
-                    objetivo.
-                    Desarrollopersonal | Organizacion y productividad | Disciplina
-                    Artesmarciales; coreanas ymixtas | Parkour | Tricking 
+                    objetivo.          
                 </p>
-                <p class="underline underline-offset-8 text-sm xl:text-xl font-medium text-gray-400 ">
+                <p class="my-2 underline underline-offset-8 text-sm xl:text-xl font-medium text-gray-400 ">
                     intereses:</p>
-                <p class="mt-2 md:mt-10 xl:mt-24 text-lg tracking-widest">                    
+                <p class="text-lg tracking-widest">                    
                     Desarrollopersonal | Organizacion y productividad | Disciplina
                     Artesmarciales coreanas y mixtas | Parkour | Tricking 
                 </p>
