--- a/templates/core/components/contact.html
+++ b/templates/core/components/contact.html
@@ -14,6 +14,13 @@
                                 class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
                         </div>
                     </div>
+                    <div class="md:flex items-center mt-12">
+                        <div class="w-full flex flex-col">
+                            <label class="font-semibold leading-none text-gray-300">your Mail</label>
+                            <input type="text"
+                                class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
+                        </div>
+                    </div>
 
                     <div>
                         <div class="w-full flex flex-col mt-8">
