--- a/templates/core/components/formation.html
+++ b/templates/core/components/formation.html
@@ -1,6 +1,6 @@
 
         <!-- Formacion -->
-        <div class="mx-36 mb-32" id="formation">
+        <div class="mx-36 my-32" id="formation">
             <div class="container flex justify-center mx-auto">
                 <div class="my-0">
                     <h1 class="text-gray-50 text-5xl text-center pb-3">Formación:</h1>
