--- a/templates/core/components/skills.html
+++ b/templates/core/components/skills.html
@@ -1,9 +1,9 @@
 <!-- Skills -->
 
 {% load static %}
-<div class="my-24">
+<div class="my-32 " id="skills">
 
-    <div class="container flex justify-center mx-auto" id="skills">
+    <div class="container flex justify-center mx-auto" >
         <div class="my-12">
             <h1 class="text-gray-50 text-5xl text-center pb-3">Skills:</h1>
             <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
