--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <div class="absolute">
 
   <nav
-      class="fixed top-0 left-0 right-0 flex flex-row-reverse items-center justify-around sm:justify-between flex-wrap bg-sky-900 py-2 px-1 ">
+      class=" mb-12 fixed top-0 left-0 right-0 flex flex-row-reverse items-center justify-around sm:justify-between flex-wrap bg-sky-900 py-2 px-1 ">
 
       <a href="{% url 'home' %}" class=" flex items-center flex-shrink-0 text-white mr-0 md:mr-6
 text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
@@ -66,7 +66,7 @@ py-2 px-1 md:mx-5 ">
                   Proyectos
               </a>
 
-              <a href="{% url 'home' %}#contact" class="
+              <a href="{% url 'contact' %}" class="
   text-white hover:bg-sky-700 hover:border border-sky-400 rounded-md font-medium
   sm:inline-block block px-2 py-2 text-center ">
                   Contacto
