--- a/templates/core/components/projects.html
+++ b/templates/core/components/projects.html
@@ -46,13 +46,18 @@
                 <div class="flex justify-between">
                     <p class="text-sm font-medium text-gray-200 ">init date:</p>
                     <p class="text-sm text-gray-50"> {{p.date}}</p>
-                    
-                <div class="flex justify-between ">
-                    <a class="px-2 py-1 mx-1 bg-gray-900 text-gray-200 text-xs rounded hover:bg-gray-800"
-                        href="#">GitHub</a>
-                    <a class="px-2 py-1 mx-1 bg-gray-300 text-gray-900 text-xs rounded hover:bg-gray-400"
-                        href="#">Live</a>
-                </div>
+
+                    <div class="flex justify-between ">
+                        {% if p.gitHub %}
+                        <a class="px-2 py-1 mx-1 bg-gray-900 text-gray-200 text-xs rounded hover:bg-gray-800"
+                            href="#">GitHub</a>
+                        {% endif %}
+
+                        {% if p.live %}
+                        <a class="px-2 py-1 mx-1 bg-gray-300 text-gray-900 text-xs rounded hover:bg-gray-400"
+                            href="#">Live</a>
+                        {% endif %}
+                    </div>
                 </div>
 
 
